# mibl

./: .bazelignore  .bazelrc  .gitignore  .obazlrc  BUILD.bzl  MODULE.bazel  README.adoc  README.md  STATUS.adoc  WORKSPACE.bazel  WORKSPACE.bzl  configure  gtags.conf
convert/: BUILD.bazel  convert.c
coswitch/: BUILD.bazel  coswitch.c
coswitch/templates/: ocaml_bigarray.BUILD  ocaml_c_api.BUILD
debug/: BUILD.bazel
deploy/: BUILD.bazel  deploy.c  deploy_config.c
emit/: BUILD.bazel
ingest/: BUILD.bazel  BUILD.bzl  mibl_ingest.c  run_mibl.sh
lib/: BUILD.bazel  BUILD.bzl  BUILD.bzlX  cmd_runner.c  config_bazel.c  config_mibl.c  config_opam.c  config_s7.c  deps.c  error_handler_s7.c  handlers.c  handlers_opam.c  load_project.c  mibl_s7.c  opam_fts.c  treewalker_project.c  utils.c
lib/debug/: BUILD.bazel  debug.c  debug_bazel.c  debug_s7.cX
lib/hdrs/: BUILD.bazel
mibl/: BUILD.bazel  BUILD.bzl  BUILD_RULES.bzl  dune.scm  mibl.c  mibl.scm  mibl_main.c  mibl_pp.scm  run_mibl.sh
mibl/dune/: README_PPX_INLINE_TEST.adoc  actions.scm  actions_with_output_to.scm  aliases.scm  api_utils.scm  cc.scm  conditionals.scm  constants.scm  debug.scm  deps.scm  dune_action_deps.scm  dune_action_run.scm  dune_actions.scm  dune_api.scm  dune_ingest.scm  dune_normalize.scm  dune_stanza_executable.scm  dune_stanza_fields.scm  dune_stanza_library.scm  dune_stanza_rule.scm  dune_stanzas.scm  dune_utils.scm  emit.scm  executables.scm  expanders.scm  fields.scm  flags.scm  install.scm  labels.scm  lexyacc.scm  libraries.scm  lookup_tables.scm  menhir.scm  miblark.scm  modules.scm  normalize.scm  opam.scm  pkg_api.scm  pkg_files.scm  ppx.scm  (+8 more)
opam/: BUILD.bazel  opam.c
repl/: BUILD.bazel  repl.c  xen_repl.c
scm/: BUILD.bazel  dune.scm  findlib.scm  libdune.scm  libmibl.scm  mibl.scm  mibl_debug.scm  mibl_expand.scm  mibl_main.scm  opam.scm
scm/codept/: codept_args.scm  codept_crawl.scm  codept_reader.scm  codept_work.scm
scm/dune/: README  action_deps.scm  action_directives.scm  action_dsl.scm  action_run.scm  action_shell.scm  actions.scm  aggregates.scm  aliases.scm  api_utils.scm  cc.scm  conditionals.scm  constants.scm  debug.scm  deps.scm  dune_action_deps.scm  dune_action_run.scm  dune_api.scm  dune_stanza_fields.scm  dune_stanzas.scm  dune_utils.scm  dune_vars.scm  executables.scm  expanders.scm  fields.scm  file_exports.scm  flags.scm  install.scm  labels.scm  lexyacc.scm  lib_deps.scm  libraries.scm  menhir.scm  miblark.scm  modules.scm  opam.scm  pct_vars.scm  pipeline.scm  pkg_api.scm  pkg_files.scm  (+15 more)
scm/findlib/: meta_test.scm
scm/mibl/: BUILD.bazel
scm/mibl0/: mibl_main.scm  show.scm
scm/opam/: opam_test.scm
scm/test/ppx_inline_test/: ppx_assert_test.c
script/: BUILD.bazel  script.c
src/: BUILD.bazel  BUILD.bzl  bazel_config.c  cmd_runner.c  config.c  config_bazel.c  config_mibl.c  config_opam.c  config_s7.c  config_s7_dune.c  debug.c  debug_bazel.c  debug_findlib.c  debug_mibl.c  debug_s7.c  deps.c  dune_load.c  error_handler.c  error_handler_dune.c  error_handler_opam.c  error_handler_s7.c  fs.c  globals.c  handlers.c  handlers_findlib.c  handlers_opam.c  load_dune.c  load_project.c  mibl.c  mibl_config.c  mibl_s7.c  oibl_config.c  opam_config.c  opam_switch_converter.c  s7_config.c  strnstr.c  treewalker.c  treewalker_project.c  utarray.c  utarray.h  (+1 more)
src/coswitch/: BUILD.bazel  coswitch_cleaner.c  opam_switch_converter.c
src/dune/: BUILD.bazel  dune_readers.c  error_handler_dune.c
src/findlib/: BUILD.bazel  BUILD.bzl  debug_findlib.c  debug_meta.c  emit_bin.c  emit_build_bazel.c  emit_jsoo.c  emit_ocaml_repo.c  emit_pkg_bindir.c  handlers_findlib.c  meta_entries.c  meta_flags.c  meta_fs.c  meta_lexis.c  meta_lexis.re  meta_packages.c  meta_parser.c  meta_properties.c  meta_settings.c  meta_syntaxis.y  meta_values.c
src/hdrs/: BUILD.bazel
src/lemon/: BUILD.bzl
src/opam/: BUILD.bazel  BUILD.bzl  opam_lexer.c  opam_lexis.c  opam_package.c  opam_parser.c  opam_syntaxis.y  opam_treewalker.c
src/opam/test/: BUILD.bazel  opam_lex.c
src/xdg/: BUILD.bazel  xdg.c
test/: BUILD.bazel  BUILD.mibl_test.template  MIBL.sh  Makefile  Mibl_test.c  Mibl_test.sh  README.adoc  WORKSPACE.tests.bzl  driver.c  mytest.scm  mytest2.scm  mytest5.scm  template_unity_test.c  work.scm
test/a/unix/: unix_a.ml  unix_a.mli
test/b/: b.mli  dune-project
test/c/: c.opam
test/cases/b/: b.opam  dune
test/cases/c/: c.mli  dune
test/cases/d/: dune-project
test/cases/dune/: BUILD.bazel
test/cases/dune/build_test/: dune
test/cases/dune/mina/: standard_pred.scm
test/cases/dune/rules/: work.scm
test/cases/dune/unit_tests/: execunits.scm  libunits.scm  rule_unittests.scm  standard_pred.scm
test/cases/ws/a/: dune
test/d/: dune
test/dune/: BUILD.bazel  README.adoc
test/dune/action_dsl/: BUILD.bazel  dsl_bash_script.dune  dsl_test.c
test/dune/action_dsl/base_cases/: BUILD.bazel
test/dune/action_dsl/inductive/: BUILD.bazel
test/dune/actions/cmp/: BUILD.bazel  BUILD.bazel.bindiff  dune
test/dune/actions/copy/: BUILD.bazel
test/dune/actions/diff/: BUILD.bazel
test/dune/baddot/: dune
test/dune/executable/main_dyad/: MANIFEST.txt  dune
test/dune/executable/main_dyad_local_deps/: dune
test/dune/executable/main_dyad_prologue/: BUILD.bazel  dune
test/dune/executable/main_dyads/: BUILD.bazel
test/dune/executable/main_dyads_local_deps/: BUILD.bazel  dune
test/dune/executable/modules/: README.adoc
test/dune/executables/main_dyad/: BUILD.bazel  dune
test/dune/executables/main_dyad_local_deps/: dune
test/dune/executables/main_dyads_local_deps/: dune
test/dune/executables/main_singleton/: dune
test/dune/executables/modules/: README.adoc
test/dune/fields/: BUILD.bazel  dsl_test.c  flags_test.c  lib_modules_test.c
test/dune/genfiles/cp/: dune
test/dune/mwe/: dune
test/dune/rules/: BUILD.bazel
test/dune/unit_tests/: libunits.scm
test/filetypes/: dune
test/opam/: BUILD.bazel  walk_test.c
test/s7/inline_tests/: WS.mibl  WS.s7
test/s7/ppx_inline_test/: BUILD.bazel  ppx_assert_test.c
test/unit/: BUILD.bazel  flags_test.c
(+422 files in other folders)
