workspace(name = "mibl")

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

load("//:WORKSPACE.bzl", "fetch_repos")
fetch_repos()

# load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")
# bazel_skylib_workspace()

# load("@rules_foreign_cc//foreign_cc:repositories.bzl", # for re2c
#      "rules_foreign_cc_dependencies")
# rules_foreign_cc_dependencies()

# load("@libs7//:WORKSPACE.bzl", libs7_fetch_repos = "fetch_repos")
# libs7_fetch_repos()

# load("@libs7//:WORKSPACE.notcurses.bzl", nc_fetch_repos = "fetch_repos")
# nc_fetch_repos()

################ rules_jsoo etc. ################
## NB: for now we need the jsoo stuff because @obazl//coswitch writes
## jsoo targets into the opam pkgs - some pkgs include a jsoo runtime.
OBAZL_BRANCH = "dev"
git_repository(
    name = "rules_jsoo",
    remote = "https://github.com/obazl/rules_jsoo",
    branch = OBAZL_BRANCH
)

load("@rules_jsoo//:WORKSPACE.bzl", jsoo_fetch_repos = "fetch_repos")
jsoo_fetch_repos()

load("@aspect_rules_js//js:repositories.bzl", "rules_js_dependencies")
rules_js_dependencies()

load("@rules_nodejs//nodejs:repositories.bzl",
     "DEFAULT_NODE_VERSION",
     "nodejs_register_toolchains")

nodejs_register_toolchains(
    name = "nodejs",
    node_version = DEFAULT_NODE_VERSION,
)

################################################################
# load(":WORKSPACE.opam.bzl", "bootstrap")
# bootstrap()

# load("//test:WORKSPACE.tests.bzl", "test_repos")
# test_repos()
