# load("@rules_cc//cc:defs.bzl", "cc_library")

load("//src:BUILD.bzl", "COPTS")

exports_files(["coswitch.c"]) # for makeheaders(?)

################################################################
cc_binary(
    name  = "coswitch",
    visibility = ["//visibility:public"],
    srcs  = [
        "coswitch.c",
        "//src/hdrs:coswitch.h",
    ],
    copts = COPTS + [
        "-Isrc",
        "-Icoswitch",
        "-Iexternal/mibl/coswitch",
        "-I$(GENDIR)/external/mibl/coswitch",

        "-I$(GENDIR)/src/hdrs",
        "-I$(GENDIR)/external/mibl/src/hdrs",

        "-I$(GENDIR)/src",
        "-I$(GENDIR)/src/opam",
        "-I$(GENDIR)/test/opam",

        "-Iexternal/mibl/src",
        "-I$(GENDIR)/external/mibl/src",

        "-Iexternal/libs7/src",

        "-Ivendored/gopt", "-Iexternal/mibl/vendored/gopt",

        "-Ivendored/logc", "-Iexternal/mibl/vendored/logc",

        "-Ivendored/uthash", "-Iexternal/mibl/vendored/uthash",
    ],
    defines = select({
        "//compilation_mode:dbg?": ["TRACING", "DEBUG_MIBL"],
        "//conditions:default":   []
    }),
    deps = [
        "//src/coswitch",
        # "//src:opam_switch_converter",
        # "//src/opam:opam_lexer"
        "//vendored/gopt",
        "//vendored/logc",
        "//vendored/uthash"
   ],
    linkstatic = 1
)

################################################################
# cc_binary(
#     name  = "help",
#     visibility = ["//visibility:public"],
#     srcs  = [
#         "help.c",
#         # "//src/hdrs:help.h",
#     ],
#     copts = CMD_FLAGS + [
#     ],
#     defines = select({
#         "//compilation_mode:dbg?": ["TRACING", "DEBUG_MIBL"],
#         "//conditions:default":   []
#     }),
# )

alias(
    name = "help",
    actual = "//man",
    visibility = ["//visibility:public"]
)
