load("//:BUILD.bzl",
     COPTS = "BASE_COPTS",
     "LIBLOG_CC_VERSION",
     "LIBS7_VERSION",
     "UTHASH_VERSION")
# load("@rules_cc//cc:defs.bzl", "cc_library")

exports_files(["coswitch.c"]) # for makeheaders(?)

################################################################
cc_binary(
    name  = "coswitch",
    visibility = ["//visibility:public"],
    srcs  = [
        "coswitch.c",
        "//src/hdrs:coswitch.h",
    ],
    deps = [
        "//src/coswitch",
        "//vendored/gopt",
        "@libs7//src:s7",
        "@liblog_cc//src:logc",
        "@uthash//src:uthash"
   ],
    copts = COPTS + [
        "-Isrc",
        "-Icoswitch",
        "-Iexternal/mibl/coswitch",
        "-I$(GENDIR)/external/mibl/coswitch",

        "-I$(GENDIR)/src/hdrs",
        "-I$(GENDIR)/external/mibl/src/hdrs",

        "-I$(GENDIR)/src",
        "-I$(GENDIR)/src/opam",
        "-I$(GENDIR)/test/opam",

        "-Iexternal/mibl/src",
        "-I$(GENDIR)/external/mibl/src",

        "-Iexternal/libs7~{}/src".format(LIBS7_VERSION),
        # "-Iexternal/libs7/src",

        "-Ivendored/gopt", "-Iexternal/mibl/vendored/gopt",

        "-Iexternal/liblog_cc~{}/src".format(LIBLOG_CC_VERSION),
        "-Iexternal/uthash~{}/src".format(UTHASH_VERSION)
    ],
    local_defines = select({
        "//compilation_mode:dbg?": ["TRACING", "DEBUG_MIBL"],
        "//conditions:default":   []
    }),
    linkstatic = 1
)

################################################################
# cc_binary(
#     name  = "help",
#     visibility = ["//visibility:public"],
#     srcs  = [
#         "help.c",
#         # "//src/hdrs:help.h",
#     ],
#     copts = CMD_FLAGS + [
#     ],
#     defines = select({
#         "//compilation_mode:dbg?": ["TRACING", "DEBUG_MIBL"],
#         "//conditions:default":   []
#     }),
# )

alias(
    name = "help",
    actual = "//man",
    visibility = ["//visibility:public"]
)
