load("//mibl:BUILD.bzl", "mibl")

mibl("debug", args = ["--show-config"])

mibl("dev", args = ["--show-config"])

sh_binary(
    name = "report",
    srcs = ["//mibl:run_mibl.sh"],
    args = ["--main", "mibl_main.scm", "--debug-report"], # "--emit-project"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
    data = ["//mibl:mibl"]
)

sh_binary(
    name = "parsetree",
    srcs = ["//mibl:run_mibl.sh"],
    args = ["--main", "mibl_main.scm", "--report-parsetree"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
    data = ["//mibl:mibl"]
)
