load("@bazel_skylib//rules:native_binary.bzl", "native_binary")

load("//mibl:BUILD.bzl", "mibl")

load("//mibl:BUILD_RULES.bzl", "run_mibl")

# mibl("debug", args = ["--show-config"])

## native_binary does not work (runfiles issue), but the same code
## installed locally as run_mibl does work. ???

# native_binary(
#     name = "debug",
#     src = "@mibl//mibl:mibl",
#     out = "mibl.debug",
#     args = ["--show-config"]
# )

run_mibl(
    name = "debug",
    src = "//mibl",
    out = "mibl.dbg",
    args = [## "--show-config",
            "--script", "mibl_main.scm",
            # "--emit-parsetree",
            # "--halt-after", "parsetree"
    ]
)

mibl("dev", args = ["--show-config"])

# mibl_runner(
#     name = "parsetree",
#     args = ["--script", "mibl_main.scm", "--emit-parsetree", "--halt-after", "parsetree"],
# )

sh_binary(
    name = "parsetree",
    srcs = ["//mibl:run_mibl.sh"],
    args = ["--script", "mibl_main.scm", "--emit-parsetree", "--halt-after", "parsetree"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
    data = ["//mibl:mibl"] # the executable run by run_mibl.sh
)

sh_binary(
    name = "mibl",
    srcs = ["//mibl:run_mibl.sh"],
    args = ["--script", "mibl_main.scm", "--emit-mibl"], # "--emit-project"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
    data = ["//mibl:mibl"] # the executable run by run_mibl.sh
)

