load(":BUILD.bzl", "mibl")

exports_files(["mibl.c", "run_mibl.sh"])

# produce executable mibl w/lib libmibl.a
mibl(name = "mibl")

# script(name = "report")
# script(name = "convert", main = "mibl_main.scm")

################
genrule(
    name = "mkhdrs",
    srcs = ["//mibl:mibl.c"], # "//mibl:xen_repl.c"],
    outs = ["mibl.h"],# "//mibl:xen_repl.h"],
    cmd = "\n".join([
        "SRC1=$(location //mibl:mibl.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location //vendored/makeheaders) \\",
        "    $(location //mibl:mibl.c);",
        # "    $(location //mibl:xen_repl.c);",
        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["//vendored/makeheaders"],
    visibility = ["//visibility:public"]
)
